ajout du début de la page css/html du projet et graphique, de plus ajout de la méthode universel fetch finallement ajout du dossier "normalize"

--- a/pageGraphiques.html
+++ b/pageGraphiques.html
@@ -3,7 +3,7 @@
         <link href='https://fonts.googleapis.com/css?family=Junge' rel='stylesheet'>
         <link href='https://fonts.googleapis.com/css?family=Galindo' rel='stylesheet'>
         <link rel="stylesheet" href="/css/normalize.css">
-        <link rel="stylesheet" href="/css/accueil.css">
+        <link rel="stylesheet" href="/css/pageProjet.css">
     </head>
     <body>
         <header>
@@ -19,8 +19,9 @@
                 <a href="compte.html" class="pages">Compte</a>
             </div>
         </header>
-
-
+        <main>
+           
+        </main>
 
         <footer>
 
