--- a/pageProjet.html
+++ b/pageProjet.html
@@ -3,7 +3,8 @@
         <link href='https://fonts.googleapis.com/css?family=Junge' rel='stylesheet'>
         <link href='https://fonts.googleapis.com/css?family=Galindo' rel='stylesheet'>
         <link rel="stylesheet" href="/css/normalize.css">
-        <link rel="stylesheet" href="/css/accueil.css">
+        <link rel="stylesheet" href="/css/pageProjet.css">
+        <script type="module" src="JavaScript/data.js" defer></script>
     </head>
     <body>
         <header>
@@ -19,8 +20,11 @@
                 <a href="compte.html" class="pages">Compte</a>
             </div>
         </header>
-
-
+        <main>
+            <div id="listeProjet">
+                
+            </div>
+        </main>
 
         <footer>
 
