ajout des projets fictif pour la page des projets et de ses images

--- a/pageProjet.html
+++ b/pageProjet.html
@@ -22,7 +22,42 @@
         </header>
         <main>
             <div id="listeProjet">
-                
+                <div class="projet">
+                    <img src="ressources/auto.png" alt="auto.png" class="projetImage">
+                    Projet 1
+                </div>
+                <div class="projet">
+                    <img src="ressources/cle_Tag.png" alt="cle.png" class="projetImage">
+                    Projet 2
+                </div>
+                <div class="projet">
+                    <img src="ressources/motoneige.png" alt="motoneige.png" class="projetImage">
+                    Projet 3
+                </div>
+                <div class="projet">
+                    <img src="ressources/auto.png" alt="auto.png" class="projetImage">
+                    Projet 4
+                </div>
+                <div class="projet">
+                    <img src="ressources/motoneige.png" alt="motoneige.png" class="projetImage">
+                    Projet 5
+                </div>
+                <div class="projet">
+                    <img src="ressources/auto.png" alt="auto.png" class="projetImage">
+                    Projet 6
+                </div>
+                <div class="projet">
+                    <img src="ressources/cle_Tag.png" alt="cle.png" class="projetImage">
+                    Projet 7
+                </div>
+                <div class="projet">
+                    <img src="ressources/auto.png" alt="auto.png" class="projetImage">
+                    Projet 8
+                </div>
+                <div class="projet">
+                    <img src="ressources/motoneige.png" alt="motoneige.png" class="projetImage">
+                    Projet 9
+                </div>
             </div>
         </main>
 
