page connexion/register

--- a/pageGraphiques.html
+++ b/pageGraphiques.html
@@ -4,6 +4,7 @@
         <link href='https://fonts.googleapis.com/css?family=Galindo' rel='stylesheet'>
         <link rel="stylesheet" href="/css/normalize.css">
         <link rel="stylesheet" href="/css/pageProjet.css">
+        <title>Coin Coin</title>
     </head>
     <body>
         <header>
