--- a/pageProjet.html
+++ b/pageProjet.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="/css/normalize.css">
         <link rel="stylesheet" href="/css/pageProjet.css">
         <script type="module" src="JavaScript/data.js" defer></script>
+        <title>Coin Coin</title>
     </head>
     <body>
         <header>
