page projets finit HTML/CSS

--- a/connexion.html
+++ b/connexion.html
@@ -17,7 +17,7 @@
                     <input type="password" class="textbox"><br>
                     <input type="submit" value="Se connecter" >
                 </form>
-                <label for="toggle" class="button goRegister">Je n'ai pas de comte</label>
+                <label for="toggle" class="button goRegister">Je n'ai pas de compte</label>
             </div>
             
             <div class="register">
@@ -37,7 +37,7 @@
                     <input type="password" class="textbox"><br>
                     <input type="submit" value="Confimer" >
                 </form>
-                <label for="toggle" class="button goLogin">J'ai déjà un comte</label>
+                <label for="toggle" class="button goLogin">J'ai déjà un compte</label>
             </div>
             
         <div class="section">
