--- a/projets.html
+++ b/projets.html
@@ -63,7 +63,18 @@
         </main>
 
         <footer>
-
+            <a href="https://github.com/Richiebits/Coin_Coin_Front-End" ><img src="ressources/github.svg" alt="github"></a>
+            <p>
+                <a href="https://github.com/TremblayElie227" target="_blank">Élie Tremblay</a>
+                <a href="https://github.com/JustLProg" target="_blank">Justin Lavoie-Ladouceur</a>
+                <a href="https://github.com/Richiebits" target="_blank">Louis-Simon Leclerc</a>
+                <a href="https://github.com/nikolasunjka" target="_blank">Nikola Sunjka</a>
+                <a href="https://github.com/gloubierETS" target="_blank">Gabriel Loubier</a>
+            </p>
+            <div>
+                <div id="circle"></div>
+                <img src="ressources/CoinCoinLogo.png" alt="logo" id="logo">
+            </div>
         </footer>
     </body>
 </html>
