avancement page graphiques

--- a/graphiques.html
+++ b/graphiques.html
@@ -3,7 +3,7 @@
         <link href='https://fonts.googleapis.com/css?family=Junge' rel='stylesheet'>
         <link href='https://fonts.googleapis.com/css?family=Galindo' rel='stylesheet'>
         <link rel="stylesheet" href="/css/normalize.css">
-        <link rel="stylesheet" href="/css/pageProjet.css">
+        <link rel="stylesheet" href="/css/graphiques.css">
         <title>Coin Coin</title>
     </head>
     <body>
@@ -21,11 +21,41 @@
             </div>
         </header>
         <main>
-           
+            <div id="listeProjets">
+                <div class="projet">Projet 1</div>
+                <div class="projet">Projet 2</div>
+                <div class="projet">Projet 3</div>
+                <div class="projet">Projet 4</div>
+            </div>
+            <div id="contenuProjet">
+                <div class="placeholder">Titre</div>
+                <div class="placeholder"></div>
+                <div class="graphique">
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                </div>
+            </div>
         </main>
+        
 
         <footer>
-
+            <a href="https://github.com/Richiebits/Coin_Coin_Front-End" ><img src="ressources/github.svg" alt="github"></a>
+            <p>
+                <a href="https://github.com/TremblayElie227" target="_blank">Élie Tremblay</a>
+                <a href="https://github.com/JustLProg" target="_blank">Justin Lavoie-Ladouceur</a>
+                <a href="https://github.com/Richiebits" target="_blank">Louis-Simon Leclerc</a>
+                <a href="https://github.com/nikolasunjka" target="_blank">Nikola Sunjka</a>
+                <a href="https://github.com/gloubierETS" target="_blank">Gabriel Loubier</a>
+            </p>
+            <div>
+                <div id="circle"></div>
+                <img src="ressources/CoinCoinLogo.png" alt="logo" id="logo">
+            </div>
         </footer>
     </body>
 </html>
