--- a/projets.html
+++ b/projets.html
@@ -3,7 +3,7 @@
         <link href='https://fonts.googleapis.com/css?family=Junge' rel='stylesheet'>
         <link href='https://fonts.googleapis.com/css?family=Galindo' rel='stylesheet'>
         <link rel="stylesheet" href="/css/normalize.css">
-        <link rel="stylesheet" href="/css/pageProjet.css">
+        <link rel="stylesheet" href="/css/projets.css">
         <script type="module" src="JavaScript/data.js" defer></script>
         <title>Coin Coin</title>
     </head>
