--- a/graphiques.html
+++ b/graphiques.html
@@ -4,6 +4,7 @@
         <link href='https://fonts.googleapis.com/css?family=Galindo' rel='stylesheet'>
         <link rel="stylesheet" href="/css/normalize.css">
         <link rel="stylesheet" href="/css/graphiques.css">
+        <script type="module" src="JavaScript/graphique.js" defer></script>
         <title>Coin Coin</title>
     </head>
     <body>
@@ -26,6 +27,17 @@
                 <div class="projet">Projet 2</div>
                 <div class="projet">Projet 3</div>
                 <div class="projet">Projet 4</div>
+                <div class="projet">Projet 5</div>
+                <div class="projet">Projet 6</div>
+                <div class="projet">Projet 7</div>
+                <div class="projet">Projet 8</div>
+                <div class="projet">Projet 9</div>
+                <div class="projet">Projet 10</div>
+                <div class="projet">Projet 11</div>
+                <div class="projet">Projet 12</div>
+                <div class="projet">Projet 13</div>
+                <div class="projet">Projet 14</div>
+                <div class="projet">Projet 15</div>
             </div>
             <div id="contenuProjet">
                 <div class="placeholder">Titre</div>
