--- a/projets.html
+++ b/projets.html
@@ -4,7 +4,7 @@
         <link href='https://fonts.googleapis.com/css?family=Galindo' rel='stylesheet'>
         <link rel="stylesheet" href="/css/normalize.css">
         <link rel="stylesheet" href="/css/projets.css">
-        <script type="module" src="JavaScript/data.js" defer></script>
+        <script type="module" src="JavaScript/graphique.js" defer></script>
         <title>Coin Coin</title>
     </head>
     <body>
@@ -23,42 +23,96 @@
         </header>
         <main>
             <div id="listeProjet">
-                <div class="projet">
-                    <img src="ressources/auto.png" alt="auto.png" class="projetImage">
-                    Projet 1
-                </div>
-                <div class="projet">
-                    <img src="ressources/cle_Tag.png" alt="cle.png" class="projetImage">
-                    Projet 2
-                </div>
-                <div class="projet">
-                    <img src="ressources/motoneige.png" alt="motoneige.png" class="projetImage">
-                    Projet 3
-                </div>
-                <div class="projet">
-                    <img src="ressources/auto.png" alt="auto.png" class="projetImage">
-                    Projet 4
-                </div>
-                <div class="projet">
-                    <img src="ressources/motoneige.png" alt="motoneige.png" class="projetImage">
-                    Projet 5
-                </div>
-                <div class="projet">
-                    <img src="ressources/auto.png" alt="auto.png" class="projetImage">
-                    Projet 6
-                </div>
-                <div class="projet">
-                    <img src="ressources/cle_Tag.png" alt="cle.png" class="projetImage">
-                    Projet 7
-                </div>
-                <div class="projet">
-                    <img src="ressources/auto.png" alt="auto.png" class="projetImage">
-                    Projet 8
-                </div>
-                <div class="projet">
-                    <img src="ressources/motoneige.png" alt="motoneige.png" class="projetImage">
-                    Projet 9
-                </div>
+                <a href="graphiques.html">
+                    <div class="projet">
+                        <img src="ressources/auto.png" alt="auto.png" class="projetImage">
+                        Projet 1
+                    </div>
+                </a>
+                <a href="graphiques.html">
+                    <div class="projet">
+                        <img src="ressources/cle_Tag.png" alt="cle.png" class="projetImage">
+                        Projet 2
+                    </div>
+                </a>
+                <a href="graphiques.html">
+                    <div class="projet">
+                        <img src="ressources/motoneige.png" alt="motoneige.png" class="projetImage">
+                        Projet 3
+                    </div>
+                </a>
+                <a href="graphiques.html">
+                    <div class="projet">
+                        <img src="ressources/auto.png" alt="auto.png" class="projetImage">
+                        Projet 4
+                    </div>
+                </a>
+                <a href="graphiques.html">
+                    <div class="projet">
+                        <img src="ressources/motoneige.png" alt="motoneige.png" class="projetImage">
+                        Projet 5
+                    </div>
+                </a>
+                <a href="graphiques.html">    
+                    <div class="projet">
+                        <img src="ressources/auto.png" alt="auto.png" class="projetImage">
+                        Projet 6
+                    </div>
+                </a>
+                <a href="graphiques.html">
+                    <div class="projet">
+                        <img src="ressources/cle_Tag.png" alt="cle.png" class="projetImage">
+                        Projet 7
+                    </div>
+                </a>
+                <a href="graphiques.html">
+                    <div class="projet">
+                        <img src="ressources/auto.png" alt="auto.png" class="projetImage">
+                        Projet 8
+                    </div>
+                </a>
+                <a href="graphiques.html">
+                    <div class="projet">
+                        <img src="ressources/motoneige.png" alt="motoneige.png" class="projetImage">
+                        Projet 9
+                    </div>
+                </a>
+                <a href="graphiques.html">
+                    <div class="projet">
+                        <img src="ressources/motoneige.png" alt="motoneige.png" class="projetImage">
+                        Projet 10
+                    </div>
+                </a>
+                <a href="graphiques.html">    
+                    <div class="projet">
+                        <img src="ressources/auto.png" alt="auto.png" class="projetImage">
+                        Projet 11
+                    </div>
+                </a>
+                <a href="graphiques.html">
+                    <div class="projet">
+                        <img src="ressources/cle_Tag.png" alt="cle.png" class="projetImage">
+                        Projet 12
+                    </div>
+                </a>
+                <a href="graphiques.html">
+                    <div class="projet">
+                        <img src="ressources/cle_Tag.png" alt="cle.png" class="projetImage">
+                        Projet 13
+                    </div>
+                </a>
+                <a href="graphiques.html">
+                    <div class="projet">
+                        <img src="ressources/cle_Tag.png" alt="cle.png" class="projetImage">
+                        Projet 14
+                    </div>
+                </a>
+                <a href="graphiques.html">    
+                    <div class="projet">
+                        <img src="ressources/auto.png" alt="auto.png" class="projetImage">
+                        Projet 15
+                    </div>
+                </a>
             </div>
         </main>
 
