ajout de animation page graphique

--- a/graphiques.html
+++ b/graphiques.html
@@ -40,8 +40,8 @@
                 <div class="projet">Projet 15</div>
             </div>
             <div id="contenuProjet">
-                <div class="placeholder">Titre</div>
-                <div class="placeholder"></div>
+                <div id="titre">Choisissez un projet</div>
+                <div id="description">Description</div>
                 <div class="graphique">
                     <div class="bar"></div>
                     <div class="bar"></div>
