--- a/projets.html
+++ b/projets.html
@@ -23,91 +23,91 @@
         </header>
         <main>
             <div id="listeProjet">
-                <a href="graphiques.html">
+                <a href="graphiques.html?titre=Projet%201">
                     <div class="projet">
                         <img src="ressources/auto.png" alt="auto.png" class="projetImage">
                         Projet 1
                     </div>
                 </a>
-                <a href="graphiques.html">
+                <a href="graphiques.html?titre=Projet%202">
                     <div class="projet">
                         <img src="ressources/cle_Tag.png" alt="cle.png" class="projetImage">
                         Projet 2
                     </div>
                 </a>
-                <a href="graphiques.html">
+                <a href="graphiques.html?titre=Projet%203">
                     <div class="projet">
                         <img src="ressources/motoneige.png" alt="motoneige.png" class="projetImage">
                         Projet 3
                     </div>
                 </a>
-                <a href="graphiques.html">
+                <a href="graphiques.html?titre=Projet%204">
                     <div class="projet">
                         <img src="ressources/auto.png" alt="auto.png" class="projetImage">
                         Projet 4
                     </div>
                 </a>
-                <a href="graphiques.html">
+                <a href="graphiques.html?titre=Projet%205">
                     <div class="projet">
                         <img src="ressources/motoneige.png" alt="motoneige.png" class="projetImage">
                         Projet 5
                     </div>
                 </a>
-                <a href="graphiques.html">    
+                <a href="graphiques.html?titre=Projet%206">    
                     <div class="projet">
                         <img src="ressources/auto.png" alt="auto.png" class="projetImage">
                         Projet 6
                     </div>
                 </a>
-                <a href="graphiques.html">
+                <a href="graphiques.html?titre=Projet%207">
                     <div class="projet">
                         <img src="ressources/cle_Tag.png" alt="cle.png" class="projetImage">
                         Projet 7
                     </div>
                 </a>
-                <a href="graphiques.html">
+                <a href="graphiques.html?titre=Projet%208">
                     <div class="projet">
                         <img src="ressources/auto.png" alt="auto.png" class="projetImage">
                         Projet 8
                     </div>
                 </a>
-                <a href="graphiques.html">
+                <a href="graphiques.html?titre=Projet%209">
                     <div class="projet">
                         <img src="ressources/motoneige.png" alt="motoneige.png" class="projetImage">
                         Projet 9
                     </div>
                 </a>
-                <a href="graphiques.html">
+                <a href="graphiques.html?titre=Projet%2010">
                     <div class="projet">
                         <img src="ressources/motoneige.png" alt="motoneige.png" class="projetImage">
                         Projet 10
                     </div>
                 </a>
-                <a href="graphiques.html">    
+                <a href="graphiques.html?titre=Projet%2011">    
                     <div class="projet">
                         <img src="ressources/auto.png" alt="auto.png" class="projetImage">
                         Projet 11
                     </div>
                 </a>
-                <a href="graphiques.html">
+                <a href="graphiques.html?titre=Projet%2012">
                     <div class="projet">
                         <img src="ressources/cle_Tag.png" alt="cle.png" class="projetImage">
                         Projet 12
                     </div>
                 </a>
-                <a href="graphiques.html">
+                <a href="graphiques.html?titre=Projet%2013">
                     <div class="projet">
                         <img src="ressources/cle_Tag.png" alt="cle.png" class="projetImage">
                         Projet 13
                     </div>
                 </a>
-                <a href="graphiques.html">
+                <a href="graphiques.html?titre=Projet%2014">
                     <div class="projet">
                         <img src="ressources/cle_Tag.png" alt="cle.png" class="projetImage">
                         Projet 14
                     </div>
                 </a>
-                <a href="graphiques.html">    
+                <a href="graphiques.html?titre=Projet%2015">    
                     <div class="projet">
                         <img src="ressources/auto.png" alt="auto.png" class="projetImage">
                         Projet 15
