creation compte terminée

--- a/connexion.html
+++ b/connexion.html
@@ -23,7 +23,7 @@
             
             <div class="register">
                 <form action="POST" id="rForm">
-                    <h1>Créer un comte</h1>
+                    <h1>Créer un compte</h1>
                     <label for="nom">Nom</label><br>
                     <input type="text" class="textbox" id="rNom"><br>
                     <label for="prenom">Prenom</label><br>
