ajout du graphique avec des lignes qui connect les points automatiquement avec redimention

--- a/graphiques.html
+++ b/graphiques.html
@@ -52,7 +52,9 @@
                     <div class="point"></div>
                     <div class="point"></div>
                     <div class="point"></div>
+                    <div class="point"></div>
 
+                    <div class="line"></div>
                     <div class="line"></div>
                     <div class="line"></div>
                     <div class="line"></div>
