--- a/connexion.html
+++ b/connexion.html
@@ -3,6 +3,7 @@
         <link href='https://fonts.googleapis.com/css?family=Junge' rel='stylesheet'>
         <link href='https://fonts.googleapis.com/css?family=Galindo' rel='stylesheet'>
         <link rel="stylesheet" href="css/connexion.css">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/bcryptjs/2.4.3/bcrypt.min.js"></script>
         <script type="module" src="/JavaScript/connexion.js"></script>
         <title>Coin Coin</title>
     </head>
@@ -13,10 +14,10 @@
                 <h1>Connexion</h1>
                 <form action="">
                     <label for="courriel">Courriel</label><br>
-                    <input type="email" class="textbox"><br>
+                    <input type="email" class="textbox" id="lEmail"><br>
                     <label for="password">Mot de passe</label><br>
-                    <input type="password" class="textbox"><br>
-                    <input type="button" value="Se connecter" >
+                    <input type="password" class="textbox" id="lMDP"><br>
+                    <input type="button" value="Se connecter" id="bLogin">
                 </form>
                 <label for="toggle" class="button goRegister">Je n'ai pas de compte</label>
             </div>
