ajout graphique dynamique, fonctionnaliter hover sur un point precit commencer

--- a/graphiques.html
+++ b/graphiques.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="/css/normalize.css">
         <link rel="stylesheet" href="/css/graphiques.css">
         <script type="module" src="JavaScript/graphique.js" defer></script>
+        <script src="https://d3js.org/d3.v7.min.js"></script>
         <title>Coin Coin</title>
     </head>
     <body>
@@ -42,28 +43,30 @@
             <div id="contenuProjet">
                 <div id="titre">Choisissez un projet</div>
                 <div id="description">Description</div>
-                <div class="graphique">
-                    <div class="point"></div>
-                    <div class="point"></div>
-                    <div class="point"></div>
-                    <div class="point"></div>
-                    <div class="point"></div>
-                    <div class="point"></div>
-                    <div class="point"></div>
-                    <div class="point"></div>
-                    <div class="point"></div>
-                    <div class="point"></div>
+                    <div class="graphique">
+                        <!--
+                        <div class="point"></div>
+                        <div class="point"></div>
+                        <div class="point"></div>
+                        <div class="point"></div>
+                        <div class="point"></div>
+                        <div class="point"></div>
+                        <div class="point"></div>
+                        <div class="point"></div>
+                        <div class="point"></div>
+                        <div class="point"></div>
 
-                    <div class="line"></div>
-                    <div class="line"></div>
-                    <div class="line"></div>
-                    <div class="line"></div>
-                    <div class="line"></div>
-                    <div class="line"></div>
-                    <div class="line"></div>
-                    <div class="line"></div>
-                    <div class="line"></div>
-                </div>
+                        <div class="line"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
+                        -->
+                    </div>
             </div>
         </main>
         
