--- a/accueil.html
+++ b/accueil.html
@@ -14,7 +14,7 @@
                 <h1>Coin Coin</h1>
             </div>
             <div id="nav">
-                <a href="accueil.html" class="pages">Acceuil</a>
+                <a href="accueil.html" class="pages">Accueil</a>
                 <a href="projets.html" class="pages">Projets</a>
                 <a href="graphiques.html" class="pages">Graphiques</a>
                 <a href="compte.html" class="pages">Compte</a>
