modification compte reste requete PUT

--- a/compte.html
+++ b/compte.html
@@ -23,19 +23,19 @@
     <main>
         <form action="" id="modification" class="">
             <label>Nom</label>
-            <input type="text">
+            <input type="text" id="TBNom" class="textbox">
             <label for="">Prenom</label>
-            <input type="text">
+            <input type="text" id="TBPrenom" class="textbox">
             <label for="">Courriel</label>
-            <input type="email" name="">
+            <input type="email" name="" id="TBEmail" class="textbox">
             <label for="">Telephone</label>
-            <input type="tel">
+            <input type="tel" id="TBTel" class="textbox">
 
             <input type="button" value="Modifier" id="bModifier">
         </form>
         <form action="" id="password" class="hide">
             <label for="">Mot de passe</label>
-            <input type="password">
+            <input type="password" id="TBPassword" class="textbox">
             <input type="button" value="Confirmer" id="bConfirmer">
             <input type="button" value="Annuler" id="bAnnuler">
         </form>
