Terminé connexion et mod compte

--- a/connexion.html
+++ b/connexion.html
@@ -17,7 +17,7 @@
                     <input type="email" class="textbox" id="lEmail"><br>
                     <label for="password">Mot de passe</label><br>
                     <input type="password" class="textbox" id="lMDP"><br>
-                    <input type="button" value="Se connecter" id="bLogin">
+                    <input type="button" value="Se connecter" id="bLogin" class="">
                 </form>
                 <label for="toggle" class="button goRegister">Je n'ai pas de compte</label>
             </div>
@@ -37,7 +37,7 @@
                     <input type="password" class="textbox" id="rMDP1"><br>
                     <label for="password2">Confirmer Mot de passe</label><br>
                     <input type="password" class="textbox" id="rMDP2"><br>
-                    <input type="button" value="Confimer" id="bRegister">
+                    <input type="button" value="Confimer" id="bRegister" class="">
                 </form>
                 <label for="toggle" class="button goLogin">J'ai déjà un compte</label>
             </div>
