--- a/compte.html
+++ b/compte.html
@@ -21,6 +21,7 @@
         </div>
     </header>
     <main>
+        <section id="errorSection"></section>
         <form action="" id="modification" class="">
             <label>Nom</label>
             <input type="text" id="TBNom" class="textbox">
@@ -30,6 +31,10 @@
             <input type="email" name="" id="TBEmail" class="textbox">
             <label for="">Telephone</label>
             <input type="tel" id="TBTel" class="textbox">
+            <label for="">Nouveau mot de passe</label>
+            <input type="password" id="TBNewPassword" class="textbox">
+            <label for="">Confirmer le mot de passe</label>
+            <input type="password" id="TBConfirmPassword" class="textbox">
 
             <input type="button" value="Modifier" id="bModifier">
         </form>
