Ajout de la page ajoutProjet

--- a/compte.html
+++ b/compte.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="/css/normalize.css">
         <link rel="stylesheet" href="/css/compte.css">
         <script type="module" src="JavaScript/compte.js"></script>
-        <title>Coin Coin</title>
+        <title>Comptes | Coin Coin</title>
     </head>
     <header>
         <div id="head">
