--- a/connexion.html
+++ b/connexion.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="css/connexion.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/bcryptjs/2.4.3/bcrypt.min.js"></script>
         <script type="module" src="/JavaScript/connexion.js"></script>
-        <title>Coin Coin</title>
+        <title>Connexion | Coin Coin</title>
     </head>
     <body>
         <div id="conteneur">
