--- a/graphiques.html
+++ b/graphiques.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="/css/graphiques.css">
         <script type="module" src="JavaScript/graphique.js" defer></script>
         <script src="https://d3js.org/d3.v7.min.js"></script>
-        <title>Coin Coin</title>
+        <title>Graphiques | Coin Coin</title>
     </head>
     <body>
         <header>
