--- a/projets.html
+++ b/projets.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="/css/normalize.css">
         <link rel="stylesheet" href="/css/projets.css">
         <script type="module" src="JavaScript/graphique.js" defer></script>
-        <title>Coin Coin</title>
+        <title>Projets | Coin Coin</title>
     </head>
     <body>
         <header>
@@ -22,6 +22,10 @@
             </div>
         </header>
         <main>
+            <div id="sectionAjouter">
+                <div></div>
+                <button id="ajoutProjet">Ajouter un projet</button>
+            </div>
             <div id="listeProjet">
                 <a href="graphiques.html?titre=Projet%201">
                     <div class="projet">
