--- a/accueil.html
+++ b/accueil.html
@@ -4,7 +4,7 @@
         <link href='https://fonts.googleapis.com/css?family=Galindo' rel='stylesheet'>
         <link rel="stylesheet" href="/css/normalize.css">
         <link rel="stylesheet" href="/css/accueil.css">
-        <title>Coin Coin</title>
+        <title>Accueil | Coin Coin</title>
     </head>
     <body>
         <header>
