modification de graphique et ajout des boutons suppression de projet et de modifier projet

--- a/projets.html
+++ b/projets.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="/css/normalize.css">
         <link rel="stylesheet" href="/css/projets.css">
         <script type="module" src="JavaScript/graphique.js" defer></script>
-        <title>Projets | Coin Coin</title>
+        <title>Coin Coin</title>
     </head>
     <body>
         <header>
@@ -25,7 +25,21 @@
             <div id="sectionAjouter">
                 <div></div>
                 <button id="ajoutProjet">Ajouter un projet</button>
+                </div>
+            <div id="optionProjet">
+                <a href="ajoutProjet.html">
+                    <div class="wiggly">
+                        Ajout activitée
+                    </div>
+                </a>
+                <div id="modifActivite" class="wiggly">
+                    Modification activitée
+                </div>
+                <div id="suprimActivite" class="wiggly">
+                    Suppression activitée
+                </div>
             </div>
+
             <div id="listeProjet">
                 <a href="graphiques.html?titre=Projet%201">
                     <div class="projet">
