Suppression du bouton modifier

--- a/projets.html
+++ b/projets.html
@@ -22,21 +22,14 @@
             </div>
         </header>
         <main>
-            <div id="sectionAjouter">
-                <div></div>
-                <button id="ajoutProjet">Ajouter un projet</button>
-                </div>
             <div id="optionProjet">
                 <a href="ajoutProjet.html">
-                    <div class="wiggly">
-                        Ajout activitée
+                    <div class="wiggly" id="ajoutProjet">
+                        Ajout d'un projet
                     </div>
                 </a>
-                <div id="modifActivite" class="wiggly">
-                    Modification activitée
-                </div>
                 <div id="suprimActivite" class="wiggly">
-                    Suppression activitée
+                    Suppression d'un projet
                 </div>
             </div>
 
