Création de projet et budget selon le temps possible

--- a/ajoutProjet.html
+++ b/ajoutProjet.html
@@ -33,7 +33,7 @@
                 <label for="TBNom">Nom du projet :</label>
                 <input type="text" id="TBNom" class="textbox">
                 <label for="TBMontantCible">Montant cible :</label>
-                <input type="text" id="TBMontantCible" class="textbox">
+                <input type="number" id="TBMontantCible" class="textbox">
                 <div id="divChoix">
                     <div>
                         <input type="radio" id="choixTemps" name="typeProjet">
