--- a/ajoutProjet.html
+++ b/ajoutProjet.html
@@ -53,11 +53,29 @@
                 <input type="date" id="TBDateCible" class="textbox">
             </form>
             <form action="" id="formProjetDroite">
-                <label for="TBRevenu">Revenu :</label>
-                <input type="password" id="TBRevenu" class="textbox">
-                <label for="TBDepense">Dépense :</label>
-                <input type="password" id="TBDepense" class="textbox">
-            </form>
+                <label for="TBDepot">Dépot :</label>
+                <div class="input-container">
+                    <input type="password" id="TBDepot" class="textbox">
+                    <label for="frequenceDepot">Fréquence de Dépot :</label>
+                        <select id="frequenceDepot" class="textbox">
+                            <option value="hebdomadaire">Hebdomadaire</option>
+                            <option value="bi-hebdomadaire">Bi-hebdomadaire</option>
+                            <option value="mensuel">Mensuel</option>
+                            <option value="annuellement">Annuellement</option>
+                        </select>
+                </div>
+                <label for="TBRetrait">Retrait :</label>
+                <div class="input-container">
+                    <input type="password" id="TBRetrait" class="textbox">
+                    <label for="frequenceRetrait">Fréquence de Retrait :</label>
+                        <select id="frequenceRetrait" class="textbox">
+                            <option value="hebdomadaire">Hebdomadaire</option>
+                            <option value="bi-hebdomadaire">Bi-hebdomadaire</option>
+                            <option value="mensuel">Mensuel</option>
+                            <option value="annuellement">Annuellement</option>
+                        </select>
+                </div>
+            </form>            
             <div id="divBouton">
                 <input type="button" value="Créer" id="btnCreer">
             </div>
