Ajout projet par budget

--- a/ajoutProjet.html
+++ b/ajoutProjet.html
@@ -55,24 +55,24 @@
             <form action="" id="formProjetDroite">
                 <label for="TBDepot">Dépot :</label>
                 <div class="input-container">
-                    <input type="password" id="TBDepot" class="textbox">
+                    <input type="number" id="TBDepot" class="textbox">
                     <label for="frequenceDepot">Fréquence de Dépot :</label>
                         <select id="frequenceDepot" class="textbox">
-                            <option value="hebdomadaire">Hebdomadaire</option>
-                            <option value="bi-hebdomadaire">Bi-hebdomadaire</option>
+                            <option value="hebdo">Hebdomadaire</option>
+                            <option value="bihebdo">Bi-hebdomadaire</option>
                             <option value="mensuel">Mensuel</option>
-                            <option value="annuellement">Annuellement</option>
+                            <option value="annuel">Annuel</option>
                         </select>
                 </div>
                 <label for="TBRetrait">Retrait :</label>
                 <div class="input-container">
-                    <input type="password" id="TBRetrait" class="textbox">
+                    <input type="number" id="TBRetrait" class="textbox">
                     <label for="frequenceRetrait">Fréquence de Retrait :</label>
                         <select id="frequenceRetrait" class="textbox">
-                            <option value="hebdomadaire">Hebdomadaire</option>
-                            <option value="bi-hebdomadaire">Bi-hebdomadaire</option>
+                            <option value="hebdo">Hebdomadaire</option>
+                            <option value="bihebdo">Bi-hebdomadaire</option>
                             <option value="mensuel">Mensuel</option>
-                            <option value="annuellement">Annuellement</option>
+                            <option value="annuel">Annuel</option>
                         </select>
                 </div>
             </form>            
