Ajout erreurs dans création projet

--- a/ajoutProjet.html
+++ b/ajoutProjet.html
@@ -25,7 +25,9 @@
         </div>
     </header>
     <main>
+        
         <div id="sectionPrincipale">
+            <section id="errorSection"></section>
             <div id="titre">
                 <h3>Ajout d'un projet</h3>
             </div>
@@ -44,7 +46,7 @@
                     <div>
                         <input type="radio" id="choixBudget" name="typeProjet">
                         <div class="tooltip">Selon le budget
-                            <span class="tooltipText">Si vous voulez calculer le temps que ça vous prendra pour mettre de côté un montant donné selon votre revenu(s) et vos dépenses</span>
+                            <span class="tooltipText">Si vous voulez calculer le temps que ça vous prendra pour mettre de côté un montant donné selon vos dépots et vos retraits</span>
                         </div>
                     </div>
                 </div>
