--- a/accueil.html
+++ b/accueil.html
@@ -4,6 +4,7 @@
         <link href='https://fonts.googleapis.com/css?family=Galindo' rel='stylesheet'>
         <link rel="stylesheet" href="/css/normalize.css">
         <link rel="stylesheet" href="/css/accueil.css">
+        <script type="module" src="JavaScript/accueil.js"></script>
         <title>Accueil | Coin Coin</title>
     </head>
     <body>
@@ -12,6 +13,10 @@
                 <div id="circle"></div>
                 <img src="ressources/CoinCoinLogo.png" alt="logo" id="logo">
                 <h1>Coin Coin</h1>
+                <div id="sectionBtn">
+                    <button= id="btnDeco">Déconnexion</button>
+                </div>
+                
             </div>
             <div id="nav">
                 <a href="accueil.html" class="pages">Accueil</a>
@@ -21,7 +26,13 @@
             </div>
         </header>
         <main>
-            <img src="ressources/github.svg" alt="">
+            <h2 id="titre">Bonjour </h2>
+            <p>Bienvenue sur Coin Coin, une application que nous avons développé pour un projet universitaire !</p>
+            <p>Son principe : Offrir un outil interactif permettant aux utilisateurs de planifier leurs objectifs financiers, <br>
+               d'estimer les budgets nécessaires et de simuler l'évolution de leur situation financière dans le temps.
+            </p>
+            <p>Son contexte : Nous avons eu les 2 derniers mois de notre session pour concevoir une version web et mobile de cette application. </p>
+            <p>En espérant que notre application vous plaira ! </p>
         </main>
         <footer>
             <a href="https://github.com/Richiebits/Coin_Coin_Front-End" ><img src="ressources/github.svg" alt="github"></a>
