Ajout d'info du projet

--- a/ajoutProjet.html
+++ b/ajoutProjet.html
@@ -36,6 +36,7 @@
                 <input type="text" id="TBNom" class="textbox">
                 <label for="TBMontantCible">Montant cible :</label>
                 <input type="number" id="TBMontantCible" class="textbox">
+                <label for="">Option de projet :</label>
                 <div id="divChoix">
                     <div>
                         <input type="radio" id="choixTemps" name="typeProjet">
