début compte admin

--- a/compte.html
+++ b/compte.html
@@ -44,5 +44,8 @@
             <input type="button" value="Confirmer" id="bConfirmer">
             <input type="button" value="Annuler" id="bAnnuler">
         </form>
+        <div id="adminDiv" class="hide">
+
+        </div>
     </main>
 </html>
