suppression comptes avec admin

--- a/compte.html
+++ b/compte.html
@@ -39,7 +39,7 @@
             <input type="button" value="Modifier" id="bModifier">
         </form>
         <form action="" id="password" class="hide">
-            <label for="">Mot de passe</label>
+            <label for="" id="tvMDP">Mot de passe</label>
             <input type="password" id="TBPassword" class="textbox">
             <input type="button" value="Confirmer" id="bConfirmer">
             <input type="button" value="Annuler" id="bAnnuler">
