Ajout de vérification de mail lors de la création de compte

--- a/connexion.html
+++ b/connexion.html
@@ -33,7 +33,11 @@
                     <input type="email" class="textbox" id="rEmail"><br>
                     <label for="tel">No Telephone (facultatif)</label><br>
                     <input type="tel" class="textbox" id="rTel"><br>
-                    <label for="password1">Mot de passe</label><br>
+                    <label for="password1">Mot de passe</label>
+                    <div class="tooltip">
+                        <img src="ressources/information.png" alt="" id="infoLogo">
+                        <span class="tooltipText">Le mot de passe doit avoir au moins 8 caractères, avec au moins une lettre majuscule, une lettre minuscule, un chiffre et un signe</span>
+                    </div><br>
                     <input type="password" class="textbox" id="rMDP1"><br>
                     <label for="password2">Confirmer Mot de passe</label><br>
                     <input type="password" class="textbox" id="rMDP2"><br>
