avancement aesthetic et ajout de depot et retrait instantanner dans le backend(reste a uipdate dynamiquement le graphique)

--- a/graphiques.html
+++ b/graphiques.html
@@ -47,6 +47,7 @@
                                     <option value="30">Mensuel</option>
                                     <option value="365">Annuel</option>
                                 </select>
+                                <button id="btnConfirmerDepot" class="btn-confirmer" style="display: none;">Ajouter Dépôt</button>
                             </div>
                         </div>
                     
@@ -63,9 +64,10 @@
                                     <option value="30">Mensuel</option>
                                     <option value="365">Annuel</option>
                                 </select>
+                                <button id="btnConfirmerRetrait" class="btn-confirmer" style="display: none;">Ajouter Retrait</button>
                             </div>
                         </div>
-                    </div>                              
+                    </div>                                              
             </div>
         </main>
         
