depot et retraint instantanner finit et ajout des 3 gaphs  dans la page d'accueil avec animation(graph bar pas finit)

--- a/accueil.html
+++ b/accueil.html
@@ -26,14 +26,23 @@
             </div>
         </header>
         <main>
-            <h2 id="titre">Bonjour </h2>
-            <p>Bienvenue sur Coin Coin, une application que nous avons développé pour un projet universitaire !</p>
-            <p>Son principe : Offrir un outil interactif permettant aux utilisateurs de planifier leurs objectifs financiers, <br>
-               d'estimer les budgets nécessaires et de simuler l'évolution de leur situation financière dans le temps.
-            </p>
-            <p>Son contexte : Nous avons eu les 2 derniers mois de notre session pour concevoir une version web et mobile de cette application. </p>
-            <p>En espérant que notre application vous plaira ! </p>
-        </main>
+            <div id="accueil-grid">
+                <div id="text-section" class="text-box">
+                    <h2 id="titre">Bonjour </h2>
+                    <p>Bienvenue sur Coin Coin, une application que nous avons développé pour un projet universitaire !</p>
+                    <p>Son principe : Offrir un outil interactif permettant aux utilisateurs de planifier leurs objectifs financiers, <br>
+                        d'estimer les budgets nécessaires et de simuler l'évolution de leur situation financière dans le temps.
+                    </p>
+                    <p>Son contexte : Nous avons eu les 2 derniers mois de notre session pour concevoir une version web et mobile de cette application. </p>
+                    <p>En espérant que notre application vous plaira ! </p>
+                </div>
+        
+                <div id="graph1" class="chart-box"></div>
+                <div id="graph2" class="chart-box"></div>
+                <div id="graph3" class="chart-box"></div>
+            </div>
+        </main>        
+        
         <footer>
             <a href="https://github.com/Richiebits/Coin_Coin_Front-End" ><img src="ressources/github.svg" alt="github"></a>
             <p>
