ajout pages html,css,js historique

--- a/accueil.html
+++ b/accueil.html
@@ -23,6 +23,7 @@
                 <a href="projets.html" class="pages">Projets</a>
                 <a href="graphiques.html" class="pages">Graphiques</a>
                 <a href="compte.html" class="pages">Compte</a>
+                <a href="historique.html" class="pages">Historique</a>
             </div>
         </header>
         <main>
