--- a/connexion.html
+++ b/connexion.html
@@ -2,7 +2,8 @@
     <head>
         <link href='https://fonts.googleapis.com/css?family=Junge' rel='stylesheet'>
         <link href='https://fonts.googleapis.com/css?family=Galindo' rel='stylesheet'>
-        <link rel="stylesheet" href="css/connexion.css">
+        <link rel="stylesheet" href="/css/normalize.css">
+        <link rel="stylesheet" href="/css/connexion.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/bcryptjs/2.4.3/bcrypt.min.js"></script>
         <script type="module" src="/JavaScript/connexion.js"></script>
         <title>Connexion | Coin Coin</title>
