ajout logo qui mène a l'accueil

--- a/accueil.html
+++ b/accueil.html
@@ -11,7 +11,7 @@
         <header>
             <div id="head">
                 <div id="circle"></div>
-                <img src="ressources/CoinCoinLogo.png" alt="logo" id="logo">
+                <a href="accueil.html"><img src="ressources/CoinCoinLogo.png" alt="logo" id="logo"></a>                
                 <h1>Coin Coin</h1>
                 <div id="sectionBtn">
                     <button= id="btnDeco">Déconnexion</button>
