--- a/graphiques.html
+++ b/graphiques.html
@@ -12,7 +12,7 @@
         <header>
             <div id="head">
                 <div id="circle"></div>
-                <img src="ressources/CoinCoinLogo.png" alt="logo" id="logo">
+                <a href="accueil.html"><img src="ressources/CoinCoinLogo.png" alt="logo" id="logo"></a>
                 <h1>Coin Coin</h1>
             </div>
             <div id="nav">
